<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="@drawable/touch_selector">

    <ImageView
        android:id="@+id/recipe_poster_iv"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/recipe_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/brownies" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/gradient_bg"
        android:padding="8dp">

        <TextView
            android:id="@+id/recipe_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            tools:text="Nutella pie" />

        <ImageView
            android:id="@+id/servings_icon_iv"
            android:layout_width="@dimen/serving_icon_dimension"
            android:layout_height="@dimen/serving_icon_dimension"
            android:layout_marginTop="@dimen/vertical_margin"
            android:contentDescription="@string/servings_image_desc"
            android:src="@drawable/restaurant"
            app:layout_constraintTop_toBottomOf="@+id/recipe_title_tv" />

        <TextView
            android:id="@+id/servings_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vertical_margin"
            android:layout_marginStart="@dimen/vertical_margin"
            android:text="@string/serving_title"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/servings_icon_iv"
            app:layout_constraintStart_toEndOf="@+id/servings_icon_iv"
            app:layout_constraintTop_toTopOf="@+id/servings_icon_iv" />

        <TextView
            android:id="@+id/servings_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vertical_margin"
            android:layout_marginStart="@dimen/vertical_margin"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/servings_title_tv"
            app:layout_constraintStart_toEndOf="@+id/servings_title_tv"
            tools:text="8" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
